Bug 1270955 - When hit-testing on fixed-pos layers, find the root APZC for the scroll container rather than the layers id. r=botond

MozReview-Commit-ID: IvcMbpINOBI